<resources>
    <string name="app_name">Ferrisfyer</string>
    <string name="controlling_local_device">I\'m playing alone</string>
    <string name="controlling_remote_device">I\'m being controlled</string>
    <string name="role_instructions">Choose one of the following options.\nIf your device is directly connected to this phone, choose \"Local device\".\nIf you want to control someone else\'s device remotely, choose \"Remote device\".</string>

    <!-- LOGIN -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">You don\'t have an account?</string>
    <string name="keep_logged_in">Keep me logged in</string>

    <!-- REGISTER -->
    <string name="register">Register</string>
    <string name="password_confirm">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="passwords_must_match">The passwords must match</string>
    <string name="field_cant_be_empty">This field can\'t be empty</string>

    <!-- DEVICE CONTROL -->
    <string name="battery_level">Battery level:</string>
    <string name="server_connection_status">Server connection status:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="connection_status">Connection status:</string>
    <string name="error_bluetooth_not_supported">Bluetooth Low Energy is not supported in your device!</string>
    <string name="error_bluetooth_required">Bluetooth is required for this app to work!</string>
    <string name="motor_status">Motor status:</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="enable_remote_control">Enable remote control</string>
    <string name="bluetooth_connected">Connected!</string>
    <string name="bluetooth_error">Error while attempting to connect…</string>

    <!-- BLUETOOTH DEVICE CHOOSER -->
    <string name="scan_for_devices">Scan for devices</string>
</resources>
